# hs2dot

./: LICENSE  README.md  git2dot.sh  graphmod4git.sh  hs2dot.cabal
src/main/: Main.hs
