Name:                hs2dot

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            Generate .dot files from .hs files

-- A longer description of the package.
Description:        Generate a .dot graph of the all the .hs files below the
                    current working directory.

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Bram Neijt

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          bneijt@gmail.com

-- A copyright notice.
-- Copyright:           

Category:            Development

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Executable hisualhommits
  -- .hs or .lhs file containing the Main module.
  Main-is:             src/main/Main.hs
  
  -- Packages needed in order to build this package.
  Build-depends:       base, haskell-src-exts, filepath, directory, graphviz, text
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
