Name:                hs2dot
Version:             0.1

Synopsis:            Generate .dot files from .hs files

Description:        Generate a .dot graph of the all the .hs files below the
                    current working directory.

License:             BSD3
License-file:        LICENSE
Author:              Bram Neijt

Maintainer:          bneijt@gmail.com
Category:            Development
Build-type:          Simple
Extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Executable hs2dot
    Main-is:            src/main/Main.hs
    GHC-Options:        -Wall  
    Build-depends:      base, haskell-src-exts, filepath, directory, graphviz, text
  
  
